deploy/tmpl/mariadb-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: $CI_PROJECT_PATH_SLUG-mariadb
  labels:
    app: $CI_PROJECT_PATH_SLUG-mariadb
  annotations:
    app.gitlab.com/app: $CI_PROJECT_PATH_SLUG-mariadb
    app.gitlab.com/env: $CI_ENVIRONMENT_SLUG-mariadb
spec:
  containers:
  - name: $CI_PROJECT_PATH_SLUG-mariadb
    image: mariadb:10.6.4
    imagePullPolicy: "IfNotPresent"
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: $CI_PROJECT_PATH_SLUG-mariadb
  name:  $CI_PROJECT_PATH_SLUG-mariadb
  annotations:
    app.gitlab.com/app: $CI_PROJECT_PATH_SLUG-mariadb
    app.gitlab.com/env: $CI_ENVIRONMENT_SLUG-mariadb
spec:
  ports:
    - name: ''
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: $CI_PROJECT_PATH_SLUG-mariadb
---
