deploy/tmpl/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $CI_PROJECT_PATH_SLUG
  labels:
    app: $CI_PROJECT_PATH_SLUG
  annotations:
    app.gitlab.com/app: $CI_PROJECT_PATH_SLUG
    app.gitlab.com/env: $CI_ENVIRONMENT_SLUG
spec:
  selector:
    matchLabels:
      app: $CI_PROJECT_PATH_SLUG
  template:
    metadata:
      labels:
        app: $CI_PROJECT_PATH_SLUG
    spec:
      containers:
        - name: $CI_PROJECT_PATH_SLUG
          image: "$CI_REGISTRY_IMAGE:$IMAGE_VERSION"
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /usr/local/app/conf/application.properties
              name: volume-conf
              readOnly: true
              subPath: application.properties
      imagePullSecrets:
        - name: $CI_PROJECT_PATH_SLUG-docker-config
      restartPolicy: Always
      initContainers: []
      volumes:
        - configMap:
            items:
              - key: application.properties
                path: application.properties
            name: $CI_PROJECT_PATH_SLUG-conf
          name: volume-conf
  minReadySeconds: 0
  progressDeadlineSeconds: 10
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
---
kind: Service
apiVersion: v1
metadata:
  name: $CI_PROJECT_PATH_SLUG-service
  annotations:
    app.gitlab.com/app: $CI_PROJECT_PATH_SLUG
    app.gitlab.com/env: $CI_ENVIRONMENT_SLUG
spec:
  selector:
    app: $CI_PROJECT_PATH_SLUG
  ports:
  # Default port used by the image
  - port: 9211
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $CI_PROJECT_PATH_SLUG-ingress
  annotations:
    app.gitlab.com/app: $CI_PROJECT_PATH_SLUG
    app.gitlab.com/env: $CI_ENVIRONMENT_SLUG
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/$CI_PROJECT_PATH_SLUG"
        backend:
          service:
            name: $CI_PROJECT_PATH_SLUG-service
            port:
              number: 9211
